SERVER-12112 Invalidate user cache before starting auth schema upgrade